--- a/Final Project/Final Report.Rmd
+++ b/Final Project/Final Report.Rmd
@@ -11,7 +11,7 @@ output:
 I have always felt that the NBA has the best data storage in the sport filed. In the beginning, I wanted to analyze the performance of the players by scrapping the data from the official NBA.stat website. However, since the NBA.stat table is in javascript format, and the official has canceled all the existing official APIs, no possible R-based crawler method has been found after the effort. Therefore, I chose an alternative, which is the basketball-reference website. This report is based on two data sources on the basketball-reference. My goal is to predict the player's salary for next season based on player performance this season.
 
 ## 1.2 Glossary
-Table Header | Second Header
+Abbreviation | Explanation
 ------------- | -------------
 Pos | Position
 Age | Age of Player at the start of February 1st of that season 
