--- a/Final Project/Final Report.Rmd
+++ b/Final Project/Final Report.Rmd
@@ -58,6 +58,8 @@ library(GGally)
 library(tidyverse)
 library(PerformanceAnalytics)
 library(plotly)
+library(caret)
+library(MASS)
 ```
 
 ##2.2 Data Scraping and Cleaning 
@@ -73,7 +75,7 @@ player_season_v1 <- url %>% read_html()%>%
 
 ```{r}
 # romove the rank column and row number
-player_season_v2 <- player_season_v1[[1]]%>%select(-Rk)
+player_season_v2 <- player_season_v1[[1]]%>%dplyr::select(-Rk)
 player_season_v3 <-player_season_v2[- grep("Player", player_season_v2$Player),]
 # make some columns numeric
 name <- c("Age","G","GS","MP","FG","FGA","FG%","3P","3PA","3P%","2P","2PA","2P%","eFG%","FT","FTA","FT%","ORB","DRB","TRB","AST","STL","BLK","TOV","PF","PTS")
@@ -84,7 +86,7 @@ rownames(player_season_v3) <- NULL
 player_season_tidy <- player_season_v3 %>% group_by(Player)%>%
    mutate(rank = min_rank(desc(G))) %>%
    filter(rank == 1) %>%
-   select(-rank)
+   dplyr::select(-rank)
 # No Scale data(for data visulization)
 player_season_tidy <- player_season_tidy %>% filter(!is.na(`3P%`) & !is.na(`FT%`)& !is.na(`2P%`)) %>% as.data.frame(.)
 head(player_season_tidy)
@@ -98,7 +100,7 @@ head(player_season_tidy)
 Considering that regression analysis is mainly used in this report, i try to scale some features.
 ```{r}
 #Here i use the Player column as the rowname since the scale function need the whole matrix features to be numeric
-scale <- player_season_tidy %>% select(Player ,Age,MP,`2P%`,`3P%`,`FT%`,TRB:PTS)
+scale <- player_season_tidy %>% dplyr::select(Player ,Age,MP,`2P%`,`3P%`,`FT%`,TRB:PTS)
 rownames(scale)<-scale[,1]
 scale1 <- scale[,-1]%>% as.matrix(.)%>%
   scale(.) %>%
@@ -118,7 +120,7 @@ salaries_v2 <- salaries[[1]]
 colnames(salaries_v2) <- NULL
 names(salaries_v2) <- as.character(unlist(salaries_v2[1,]))
 salaries_v2 <- salaries_v2[-1,] %>%
-  select(-Rk)
+  dplyr::select(-Rk)
 rownames(salaries_v2) <- NULL
 head(salaries_v2)
 ```
@@ -138,13 +140,13 @@ salaries_v3 <-na.omit(salaries_v2)
 salaries_v4 <- salaries_v3 %>% group_by(Player) %>%
   mutate(rank = min_rank(desc(`2018-19`))) %>%
    filter(rank == 1) %>%
-   select(-rank)
+   dplyr::select(-rank)
 head(salaries_v4)
 ```
 
 ```{r}
 salaries_tidy <- salaries_v4 %>% 
-  select(Player,Tm,`2018-19`)%>%
+  dplyr::select(Player,Tm,`2018-19`)%>%
   as.data.frame(.)
 # Following two players' salaries are not changed after transfer(So i delete them to avoid duplication of one player after doing table merging)
 salaries_tidy <- salaries_tidy[!(salaries_tidy$Player=="John Jenkins" & salaries_tidy$Tm=="NYK"),]
@@ -185,7 +187,7 @@ write.csv(stats_for_visualization,'18-19players_stat.csv')
 ## 3.1 Frist Check
 ```{r}
 corrplot(cor(stats_scale %>% 
-               select(salary18_19, Age:PTS, contains("%")), 
+               dplyr::select(salary18_19, Age:PTS, contains("%")), 
              use = "complete.obs"), 
          method = "circle",type = "upper")
 ```
@@ -198,7 +200,7 @@ Besides, MP is strongly correlated with multiple features and may have multiple 
 ```{r,warning=FALSE,message=FALSE}
 stats_salary_cor <- 
   stats_scale %>% 
-  select(salary18_19,PTS, MP, TOV, AST, STL, TRB)
+  dplyr::select(salary18_19,PTS, MP, TOV, AST, STL, TRB)
 ggpairs(stats_salary_cor)
 cor(stats_salary_cor)[,"salary18_19"]
 ```
@@ -237,10 +239,10 @@ by hovering on the points in the interactive plot. It includes a lot of All-Star
 
 #5 Multiple Regression
 ```{r}
-regression <- stats_scale %>% select(salary18_19,PTS, MP, TOV, AST, STL, TRB)
+regression <- stats_scale %>% dplyr::select(salary18_19,PTS, MP, TOV, AST, STL, TRB)
   lm(salary18_19~ PTS + MP + TOV + AST + STL + TRB, data =regression)
 ```
-From here, we can see that points per game is the most significant feature of positive impact, while turnovers per game is the most significant feature of negative impact.
+From here, we can see that points per game is the most significant feature of positive impact, while turnovers per game is the most significant feature of negative impact. However, simple multiple regression also has some problems, that is, there are multiple collinearities.
 
 ## 5.1 Player 's Importance And Incautiousness
 Here we make two definitions that a player is "important" if his minutes played is above average and is "incautious" if his turnover per game is above average.
@@ -263,20 +265,50 @@ regression %>%
   ylab("turnovers per game")
 ```
 
-It's true that players with higher salaries make more turnovers. But the tendency is weak.
+It's true that players with higher salaries make more turnovers. But the tendency is weak.So in fact, turnovers don't have much impact on salaries.
 
 ```{r}
 lm(formula = salary18_19 ~ Importance * Incautiousness, data=regression)
 ```
 
-This shows that when a player is important, he is paid more with fewer turnovers.
+This shows that when a player is important, he is paid more with fewer turnovers. But the impact is limited.
+
+## 5.3 Stepwise Regression
+```{r}
+# Do Stepwise Regression
+stepdata <- stats_scale %>%  dplyr::select(Age:salary18_19)
+full.model <- lm(salary18_19~., data =stepdata)
+step.model <- stepAIC(full.model, direction = "both", 
+                      trace = FALSE)
+summary(step.model)
+# Set seed for reproducibility
+set.seed(123)
+# Set up repeated k-fold cross-validation
+train.control <- trainControl(method = "cv", number = 10)
+# Train the model
+step.model <- train(salary18_19 ~., data = regression,
+                    method = "leapBackward", 
+                    tuneGrid = data.frame(nvmax = 1:9),
+                    trControl = train.control
+                    )
+step.model$results
+```
+
+From the result we can see that three-variable model's RMSE is the smallest.
+
+```{r}
+summary(step.model$finalModel)
+coef(step.model$finalModel, 3)
+```
+
+The best model is salary18_19 ~ PTS + AST + TRB
 
 # 6 Conclusion
 ## 6.1 What i want to predict
 As Lebron James  fan, I am concerned about the new contract for the Lakers who may stay next season. Let's find them first.
 ```{r}
 salaries_v4 %>% filter(Tm == "LAL" & `2019-20` == "")%>%
-  select(Player)
+  dplyr::select(Player)
 Pope <- stats_scale %>% filter(Row.names == "Kentavious Caldwell-Pope")
 Bullock <- stats_scale %>% filter(Row.names == "Reggie Bullock")
 Stephenson <- stats_scale %>% filter(Row.names == "Lance Stephenson")
@@ -285,17 +317,17 @@ Pope
 
 ## 6.2 Analysis conclusion
 ```{r}
-salary_prediction <- function(m, point, minutes, turn_over, assists, steals, rebounds){
-  pre_new <- predict(m, data.frame(PTS = point, MP = minutes, TOV= turn_over, AST= assists, STL= steals, TRB= rebounds))
+salary_prediction <- function(m, point,assists,rebounds){
+  pre_new <- predict(m, data.frame(PTS = point, AST= assists, TRB= rebounds))
   msg <- paste( "Expected Salary: $", format(round(pre_new), big.mark = ","), sep = "")
   print(msg)
 }
-model <- lm(salary18_19~ PTS + MP + TOV + AST + STL + TRB, data =regression)
-salary_prediction(model,Pope$PTS,Pope$MP,Pope$TOV,Pope$AST,Pope$STL,Pope$TRB)
-salary_prediction(model,Bullock$PTS,Bullock$MP,Bullock$TOV,Bullock$AST,Bullock$STL,Bullock$TRB)
-salary_prediction(model,Stephenson$PTS,Stephenson$MP,Stephenson$TOV,Stephenson$AST,Stephenson$STL,Stephenson$TRB)
+model <- lm(salary18_19~ PTS + AST + TRB, data =regression)
+salary_prediction(model,Pope$PTS,Pope$AST,Pope$TRB)
+salary_prediction(model,Bullock$PTS,Bullock$AST,Bullock$TRB)
+salary_prediction(model,Stephenson$PTS,Stephenson$AST,Stephenson$TRB)
 ```
-So Salaries for Pope, Bullock and Stephenson for next season are $7,785,809, $7,126,513 and $5,286,590
+So Salaries for Pope, Bullock and Stephenson for next season are $6,771,542, $7,275,901 and $5,902,181
 
 
 
