--- a/Final Project/Final_Report.tex
+++ b/Final Project/Final_Report.tex
@@ -282,14 +282,32 @@ players will have higher minutes played and higher salaries.
 
 \section{4 Data Visualization}\label{data-visualization}
 
-\subsection{4.1 Interactive Plot}\label{interactive-plot}
+\subsection{4.1 Distribution of
+Salaries}\label{distribution-of-salaries}
 
-\includegraphics{Final_Report_files/figure-latex/unnamed-chunk-13-1.png}
+\includegraphics{Final_Report_files/figure-latex/unnamed-chunk-13-1.pdf}
 
-\subsection{4.2 Scatter Plot With Regression
-Line}\label{scatter-plot-with-regression-line}
+\begin{verbatim}
+## [1] 7462175
+\end{verbatim}
+
+With this distribution plot, we can see that most of the players'
+salaries are between 1 million and 10 million. Although the average
+salary is more than 7 million, it is because of the super-high salary
+level of the superstars.
+
+\subsection{4.2 Salaries By Teams}\label{salaries-by-teams}
 
 \includegraphics{Final_Report_files/figure-latex/unnamed-chunk-14-1.pdf}
+
+The average salary of the Houston Rockets and the Miami Heat is high.
+\#\#4.3 Interactive Plot
+\includegraphics{Final_Report_files/figure-latex/unnamed-chunk-15-1.png}
+
+\subsection{4.4 Scatter Plot With Regression
+Line}\label{scatter-plot-with-regression-line}
+
+\includegraphics{Final_Report_files/figure-latex/unnamed-chunk-16-1.pdf}
 
 Under the simple linear model, we can understand that the fitted curve
 represents the average level of the league, and the player below the
@@ -333,7 +351,7 @@ per game is above average.
 \subsubsection{5.2.1 Incautiousness
 Comparision}\label{incautiousness-comparision}
 
-\includegraphics{Final_Report_files/figure-latex/unnamed-chunk-17-1.pdf}
+\includegraphics{Final_Report_files/figure-latex/unnamed-chunk-19-1.pdf}
 
 The plot shows that the number of turnovers of the players with higher
 salaries will increase correspondingly, but the magnitude is not large.
