--- a/Final Project/Final_Report.tex
+++ b/Final Project/Final_Report.tex
@@ -301,7 +301,9 @@ level of the superstars.
 \includegraphics{Final_Report_files/figure-latex/unnamed-chunk-14-1.pdf}
 
 The average salary of the Houston Rockets and the Miami Heat is high.
-\#\#4.3 Interactive Plot
+
+\subsection{4.3 Interactive Plot}\label{interactive-plot}
+
 \includegraphics{Final_Report_files/figure-latex/unnamed-chunk-15-1.png}
 
 \subsection{4.4 Scatter Plot With Regression
