--- a/Final Project/Final Report.Rmd
+++ b/Final Project/Final Report.Rmd
@@ -2,11 +2,11 @@
 title: "Prediction of NBA Player's Salary Based on Stepwise Regression Model"
 author: "Hongye Xu"
 output:
-  html_document:
-    df_print: paged
   pdf_document:
     keep_tex: yes
     latex_engine: xelatex
+  html_document:
+    df_print: paged
 ---
 ---
 #1 Introduction
@@ -221,14 +221,29 @@ ggplot(stats_for_visualization, aes(x=Tm.x, y=salary18_19)) +
 ```
 
 The average salary of the Houston Rockets and the Miami Heat is high.
+
 ##4.3 Interactive Plot
 ```{r,echo=FALSE,warning=FALSE,message=FALSE}
 names(stats_for_visualization)[4] <- "Team"
 # for html output-------
-plot_ly( format = "pdf",data = stats_for_visualization , x = ~salary18_19, y = ~PTS, color = ~Team,
+#plot_ly( format = "pdf",data = stats_for_visualization , x = ~salary18_19, y = ~PTS, color = ~Team,
+#       hoverinfo = "text",
+#      text = ~paste("Player: ", Player,
+#                   "<br>Salary: ", format(salary18_19, big.mark = ","),"$",
+#                    "<br>PTS: ", round(PTS, digits = 3),
+#                    "<br>Team: ", Team)) %>% 
+# layout(
+#   title = "Salary vs Points Per Game",
+#   xaxis = list(title = "Salary USD"),
+#   yaxis = list(title = "Points per Game")
+ #)
+# for html output-------
+
+# for pdf output ------
+a <- plot_ly( format = "pdf",data = stats_for_visualization , x = ~salary18_19, y = ~PTS, color = ~Team,
        hoverinfo = "text",
-      text = ~paste("Player: ", Player,
-                   "<br>Salary: ", format(salary18_19, big.mark = ","),"$",
+       text = ~paste("Player: ", Player,
+                     "<br>Salary: ", format(salary18_19, big.mark = ","),"$",
                     "<br>PTS: ", round(PTS, digits = 3),
                      "<br>Team: ", Team)) %>% 
  layout(
@@ -236,22 +251,8 @@ plot_ly( format = "pdf",data = stats_for_visualization , x = ~salary18_19, y = ~
    xaxis = list(title = "Salary USD"),
    yaxis = list(title = "Points per Game")
  )
-# for html output-------
-
-# for pdf output ------
-#a <- plot_ly( format = "pdf",data = stats_for_visualization , x = ~salary18_19, y = ~PTS, color = ~Team,
-#       hoverinfo = "text",
-#       text = ~paste("Player: ", Player,
-#                     "<br>Salary: ", format(salary18_19, big.mark = ","),"$",
-#                    "<br>PTS: ", round(PTS, digits = 3),
-#                     "<br>Team: ", Team)) %>% 
- #layout(
- #  title = "Salary vs Points Per Game",
- #  xaxis = list(title = "Salary USD"),
- #  yaxis = list(title = "Points per Game")
- #)
-#tmpFile <- tempfile(fileext = ".png")
-#export(a, file = tmpFile)
+tmpFile <- tempfile(fileext = ".png")
+export(a, file = tmpFile)
 # for pdf output ------
 ```
 
